--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,34 @@
-#navbar{
-	background-color: #000;
-	height: 100px;
-	border-top: 5px solid blue;
+.video{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	min-width: 100%;
+	min-height:100%;
+	width: auto;
+	height: auto;
+	z-index: -1;
 }
+.page-1{
+	z-index:1
+	
+}
+#navbar{
+	position: fixed;
+	width: 100%;
+	height: 100px;
+	z-index: 1;
+	background: rgba(77, 77, 51, 0.2);
+	border-top: 5px solid blue;	
+	-webkit-transition: background 0.7s ease-in-out;
+	transition: background 0.7s ease-in-out;
+}
+
 #navbar ul{
 	list-style-type: none; 
 	overflow: hidden;
 	float: right;
-	margin: 30px 80px 0 0;
+	margin: 30px 50px 0 0;
 }
 
 #navbar li{
@@ -20,7 +41,6 @@
 	font-size: 25px;
 	text-decoration: none;
 	color: #00f;
-	/* transition: 0.5s ease-in-out; */
 }
 
 #navbar li a:hover{
@@ -29,8 +49,8 @@
 }
 
 .search {
-    position: absolute;
-    left: 650px;
+	position: absolute;
+	right: 520px;
     border: 2px solid #ccc;
     border-radius: 8px;
     padding: 8px;
@@ -47,28 +67,102 @@
 }
 
 #content-1, #content-2{
-    font-size: 25px;
-    margin: 0 auto;
+	font-size: 25px;
     text-align: center;
     font-family: 'Rock Salt', cursive;
-    margin-top: 100px;
+    margin-top: 170px;
     font-weight: bold;
 }
 
 #content-2{
-	margin-top: 25px;
+	margin-top: 80px;
+}
+
+#content-2 hr{
+	border: 5px solid #ff0;
+	width: 430px;
+	position: relative;
+	top: -20px;
+	left: 5px;
 }
 
 .my-image{
-	height: 450px;
-	width: 300px;
+	height: 550px;
+	width: 750px;
+	opacity: 0.8;
 }
 
 .hello{
-	font-size: 60px;
+	font-size: 80px;
+	color: #00f;
 }
 
-#page-1-content{
-	
+.hello-2{
+	font-size: 35px;
+	color: #ff0;
 }
 
+.page-2{
+	text-align: center;
+	background: #fff;
+	/*background: rgba( 256, 156, 256, 0.5);*/
+}
+
+.page-2 h2{
+	font-family: 'Rock Salt', cursive;
+	color: #00f;
+	margin-top: 100px;
+	z-index: 1;
+	animation: bounce1 1s infinite alternate;
+  -webkit-animation: bounce1 1s infinite alternate;
+
+}
+@keyframes bounce1 {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-15px);
+  }
+}
+
+.page-2 hr{
+	border: 2px solid #ff0;
+	width: 250px;
+	animation: bounce 1s infinite alternate;
+  -webkit-animation: bounce 1s infinite alternate;
+
+}
+
+@keyframes bounce {
+  from {
+    transform: translateX(-10px);
+  }
+  to {
+    transform: translateX(20px);
+  }
+}
+@-webkit-keyframes bounce {
+  from {
+    transform: translateX(0px);
+  }
+  to {
+    transform: translateX(20px);
+  }
+}
+
+#content-3, #content-4{
+	margin-top: 50px;
+}
+
+.about-image{
+	height: 500px;
+	width: 500px;
+}
+
+.my-info{
+	font-family: 'Pompiere', cursive;
+	font-size: 30px;
+	padding: 10px;
+	font-weight: bold;
+}
