--- a/css/style.css
+++ b/css/style.css
@@ -291,25 +291,26 @@ input[type="radio"]{
 	border-color: #ff0;
 	border-radius: 8px;
 	margin: 0 0 4px 5px;
+	
 }
 
 #form textarea{
 	margin-left: 5px;
+	box-sizing: border-box;
 }
 
-#content-7 h3{
-	font-size: 45px;
-	color: #fff;
+#content-8 h3{
+	font-size: 35px;
+	color: #ff0;
 	font-family: 'Pompiere', cursive;
 	font-weight: bold;
-	margin-left: 150px;
 	text-decoration: underline;
-}
+	text-align: center;
 
+}
 .project-image{
 	height: 100%;
 	width: 100%;
-	/*margin: 10px 0 10px 40px;*/
 	cursor: pointer;
 	transition: ease-in-out 0.5s;
 }
@@ -324,21 +325,52 @@ input[type="radio"]{
 }
 
 .description{
-	/*text-align: center;*/
-	color: #fff;
+    color: #A1C7D4;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.description-para{
+	font-weight: bold;
+	font-size: 25px;
+	font-family: 'Pompiere', cursive; 
+	text-align: center;
+	margin-top: 25px;
+	padding: 10px;
+
 }
 
 .projects{
 	border: 2px solid #ff0;
-	border-radius: 5px;
-	margin: 20px;
+	border-radius: 8px;
+	margin: 0 0 20px 25px;
 	text-align: center;
-	height: 150px;
+
 }
-.footer{
+
+.footer-page{
 	text-align: center;
 	font-size: 25px;
+	
 }
+.footer-para{
+	font-weight: bold;
+	font-size: 30px;
+	font-family: 'Pompiere', cursive;
+	/*margin-top: 5px;*/
+	padding: 5px;
+}
+
+i{
+	margin: 10px;
+	transition: all ease-in-out 0.3s;
+}
+
+i:hover{     
+	transform: scale(1.3, 1.3); 
+	color: #f00;
+}
+
 
 
 
@@ -513,9 +545,35 @@ input[type="radio"]{
 	}
 
 	#form input{
-		width: 60%;
+		margin: 0 2px 0 2px;
+		width: 50%;
+		
 	}
 
 	#form textarea {
-		width: 75%;
+		width: 85%;		
+	}
+	
+	.straight-line{
+		display: none;
+	}	
+
+	.projects{
+		margin: 28px 0 0 0;
+		text-align: center;
+
+	}
+
+	.project-image-modal{
+		height: 100%;
+		width: 100%;
+	}
+
+	.project-image:hover{
+		transform: scaleX(1.03);
+	}
+
+	#content-8 h3{
+		margin-top: 50px;
+	}
 }
