--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
 
 .page-2{
 	text-align: center;
-	margin-top: 200px;
+	margin-top: 210px;
 }
 
 .page-2 h2, .page-3 h2, .page-4 h2{
@@ -123,7 +123,7 @@
 	margin-top: 35px;
 	z-index: 1;
 	text-align: center;
-	animation: bounce 1 1s infinite alternate;
+	animation: bounce1 1s infinite alternate;
 	-webkit-animation: bounce1 1s infinite alternate;
 
 }
@@ -198,7 +198,6 @@ input[type="radio"]{
 }
 
 .page-3{
-	margin-top: 20px;
 	color: #D5E5EB;
 
 }
@@ -259,8 +258,6 @@ input[type="radio"]{
 	font-family: 'Pompiere', cursive;
 	font-weight: bold;
 	color: #ff0;
-	
-	-ms-writing-mode: vertical-lr; 
 	-webkit-writing-mode: vertical-lr;
 	-moz-writing-mode: vertical-lr;
 	-ms-writing-mode: vertical-lr;
@@ -306,7 +303,6 @@ input[type="radio"]{
 	font-weight: bold;
 	text-decoration: underline;
 	text-align: center;
-
 }
 .project-image{
 	height: 100%;
@@ -357,7 +353,6 @@ input[type="radio"]{
 	font-weight: bold;
 	font-size: 30px;
 	font-family: 'Pompiere', cursive;
-	/*margin-top: 5px;*/
 	padding: 5px;
 }
 
@@ -371,8 +366,20 @@ i:hover{
 	color: #f00;
 }
 
+.page-4, .page-3{
+	margin-bottom: 50px;
+	margin-top: 10px;
+}
 
+footer{
+	margin-top: 4px;
+}
 
+footer{
+	background: -webkit-linear-gradient(right,rgba(51, 204, 51,0.5),rgba(0, 51, 153,0.5));
+	background: -ms-linear-gradient(right,rgba(51, 204, 51,0.5),rgba(0, 51, 153,0.5));
+	background: -moz-linear-gradient(right,rgba(51, 204, 51,0.5),rgba(0, 51, 153,0.5));
+}
 
 @media all and (max-width: 1200px) {
 
@@ -545,7 +552,7 @@ i:hover{
 	}
 
 	#form input{
-		margin: 0 2px 0 2px;
+		margin: 0 2px 0 5px;
 		width: 50%;
 		
 	}
